# zerolang

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
bootstrap/: README.md
compiler0/: README.md  zasthash.py  zc.py  zchar.py  zcharclass.py  zemitterc_runtime.py  zemitterc_templates.py  zlexer.py  zsqldump.py  zsymtab_proto.py  ztokendump.py  ztypecheck.py  ztypes.py
doc/: '  Design-OPEN.html  Design-OPEN.pdoc  Design-REJECTED.html  Design-REJECTED.pdoc  Makefile  TODO-string-ownership.md  TODO.html  TODO.pdoc  bootstrap.html  bootstrap.pdoc  cli.html  cli.pdoc  codereview20260321.md  codereview20260322.md  codereview20260329.md  codereview20260428.md  compiler.html  compiler.pdoc  f5h.md  faq.html  faq.pdoc  freeze_audit.md  functiongenerics.md  grammar.html  grammar.pdoc  index.html  index.pdoc  io.html  io.pdoc  namemangling.md  os.html  os.pdoc  ownership.html  ownership.pdoc  ownership_old.html  ownership_old.pdoc  ownership_thoughts.html  ownership_thoughts.pdoc  philosophy.html  (+35 more)
doc/style/: init.js  nav.html  prism-zerolang.js  zerolang.css
docs/: Design-OPEN.html  Design-OPEN.pdoc  TODO.html  TODO.pdoc  compiler.html  compiler.pdoc  faq.html  faq.pdoc  grammar.html  grammar.pdoc  index.html  index.pdoc  ownership.html  ownership.pdoc  perf-baseline.md  philosophy.html  plan_phaseA.md  release_method_plan.md  representation_of_types.html  representation_of_types.pdoc  roadmap.pdoc  selfhost_hardening.md  spec.html  spec.pdoc  stdlib_ast.html  stdlib_ast.pdoc  stdlib_collections.html  stdlib_collections.pdoc  stdlib_index.html  stdlib_index.pdoc  stdlib_io.html  stdlib_io.pdoc  stdlib_os.html  stdlib_os.pdoc  stdlib_system.html  stdlib_system.pdoc  stdlib_tokenize.html  stdlib_tokenize.pdoc  styleguide.html  styleguide.pdoc  (+10 more)
docs/style/: prism-picodoc.js  (+2 more)
examples/: arbprec_constants.z  armpred.z  arrays.z  asgn.z  astdemo.z  atomic_call_temps.z  autoproject.z  borrowed_record.z  box.z  callctl.z  case.z  chained_method_calls.z  char_types.z  class_text_protocol.z  classes.z  cli_basic.z  collreturn.z  compileerror.z  constfold.z  constructors.z  control.z  create_null.z  data.z  defaults.z  dissectlib.z  dissectuse.z  dobreak.z  doctl.z  dump_stamps.z  equality.z  exhaustnarrow.z  facets.z  factorial.z  fibonacci.z  field_reassign.z  float_mod.z  float_widths.z  forbind.z  forctl.z  forloop.z  (+109 more)
src/: test.py  zast.py  zast.z  zastdump.py  zasthash.py  zc.py  zc.z  zcharclass.py  zcheck.z  zdiag.z  zemitterc.py  zemitterc.z  zemitterc_runtime.py  zemitterc_templates.py  zenv.py  zenv.z  zfix.z  zgenerator.py  zgenerator.z  zl.z  zlexer.py  zlexer.z  zlint.z  zls.z  zparser.py  zparser.z  zprettyprint.py  zrule.z  zsource.z  zsqldump.py  zsqldump.z  zsymbol.py  zsymtab_proto.py  zsynth.py  ztestrunner.z  ztokentype.py  ztypecheck.py  ztypecheck.z  ztypechecker.py  ztypedast.py  (+7 more)
tests/: _xdist_build.py  conftest.py  leakcheck.sh  run_corpus.sh  selfhost_asan.sh  test_ast_traversal_coverage.py  test_asthash.py  test_child_id_infra.py  test_cli.py  test_dumpsql_z.py  test_emitc_leak_z.py  test_emitc_z.py  test_emitter.py  test_error_format_z.py  test_findings.py  test_fixedpoint.py  test_generator_validation.py  test_lexer.py  test_lexer_differential.py  test_parser.py  test_parser_differential.py  test_run_corpus_z.py  test_runtime_templates.py  test_symtab_ids.py  test_typecheck.py  test_typed_tree.py  test_unit_ids.py  test_vfs.py  test_zast_z.py  test_zenv_z.py  test_zlexer_stub.py  test_zlexer_z.py  test_zparser_z.py  test_ztypes_z.py  test_ztyping_z.py  test_zvfs_diff.py  test_zvfs_z.py  zvfs_script.py
tools/: astdump.py  cleanup_diff.py  emit_snapshot.sh  export_native_fragments.py  fix_style.py  lexdump.py  lint_style.py  probe_dumpsql.py  probe_emitc.py  sweep_dumpsql.py  sweep_emitc.py
(+1295 files in other folders)
