[project]
name = "zerolang"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-timeout",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
timeout = 30
markers = [
    "lexer: tokenizer / lexer tests",
    "parser: parser-only tests (AST shape, no typecheck)",
    "typecheck: type checker, ownership, monomorphization",
    "emitter: C-emitter tests; runtime variants compile via gcc and execute",
    "runtime: subset of emitter tests that spawn gcc + execute the binary",
    "infra: compiler-infrastructure tests (id tables, hashing, SQL dump, VFS)",
    "cli: zc.py CLI tests",
    "leak: memory-leak gate (one ASan binary per example, slow); not in `make test`",
]

[tool.ty]
environment = { extra-paths = ["src"] }
