[project]
name = "zerolang"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-timeout",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py312"
src = ["compiler0"]

[tool.pytest.ini_options]
pythonpath = ["compiler0", "tests"]
# Headroom for the per-call system-lib unpickle (conftest _get_cached_system_units)
# which can be CPU-starved past a tight ceiling under -n auto load; 90s still
# catches a genuinely hung test. (Python-reference in-process tests only.)
timeout = 90
markers = [
    "lexer: tokenizer / lexer tests",
    "parser: parser-only tests (AST shape, no typecheck)",
    "typecheck: type checker, ownership, monomorphization",
    "emitter: C-emitter tests; runtime variants compile via gcc and execute",
    "runtime: subset of emitter tests that spawn gcc + execute the binary",
    "infra: compiler-infrastructure tests (id tables, hashing, SQL dump, VFS)",
    "cli: compiler0/zc.py CLI tests",
    "leak: memory-leak gate (one ASan binary per example, slow); not in `make test`",
    "native: exercises the self-hosted native compiler (src/*.z); run via make test-native",
]

[tool.ty]
environment = { extra-paths = ["compiler0"] }
