[project]
name = "zerolang"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-timeout",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py312"
src = ["compiler0"]

[tool.pytest.ini_options]
pythonpath = ["compiler0", "tests"]
# The timeout applies to the test function only (timeout_func_only), not fixture
# setup: the self-hosted differential fixtures build heavy binaries once and share
# them across xdist workers (zc is ~3min of C; under -n a worker may also block
# that long on the shared-build lock), which legitimately exceeds any per-test
# ceiling. 90s still catches a genuinely hung test body; the per-call system-lib
# unpickle, now in untimed setup, no longer races the ceiling under -n auto load.
timeout = 90
timeout_func_only = true
markers = [
    "lexer: tokenizer / lexer tests",
    "parser: parser-only tests (AST shape, no typecheck)",
    "typecheck: type checker, ownership, monomorphization",
    "emitter: C-emitter tests; runtime variants compile via gcc and execute",
    "runtime: subset of emitter tests that spawn gcc + execute the binary",
    "infra: compiler-infrastructure tests (id tables, hashing, SQL dump, VFS)",
    "cli: compiler0/zc.py CLI tests",
    "leak: memory-leak gate (one ASan binary per example, slow); not in `make test`",
    "native: exercises the self-hosted native compiler (src/*.z); run via make test-native",
]

[tool.ty]
environment = { extra-paths = ["compiler0"] }
